# pgspec

./: .gitignore  CHANGELOG.md  DESIGN.md  go.mod  go.sum  selfdoc.json
.rlsbl/: config.json
.rlsbl/changes/: .validated  0.1.1.jsonl  0.1.2.jsonl  0.1.2.md  0.2.0.md  0.2.1.jsonl  0.2.1.md  unreleased.jsonl
.rlsbl/releases/: unreleased.toml
.selfdoc/hashes/: hashes.json
cmd/pgdesign/: DESIGN.md  main.go  version.go
docs/: _CLAUDE.md  _README.md  format-reference.md  migration-guide.md  quickstart.md  semantic-types.md  validation-rules.md
internal/codegen/: codegen.go  codegen_test.go  python.go  python_test.go
internal/diagnostic/: diagnostic.go  diagnostic_test.go
internal/diff/: diff.go  diff_test.go  format.go
internal/discover/: DESIGN.md
internal/extregistry/: builtins.go  extregistry_test.go
internal/fd/: fd.go  fd_test.go
internal/format/: format.go  format_test.go
internal/generate/: DESIGN.md  generate.go  generate_test.go
internal/introspect/: DESIGN.md  export.go  introspect.go  introspect_test.go
internal/migrate/: DESIGN.md  apply.go  generate.go  migrate_test.go  migration.go  parse_migration.go  rollback.go  semver.go  sql_gen.go  state.go
internal/model/: DESIGN.md  build.go  model.go  model_test.go  topo.go
internal/parse/: parse.go  types.go
internal/risk/: DESIGN.md
internal/serve/: handlers.go  serve.go  serve_test.go
internal/sql/: DESIGN.md  sql.go  (+1 more)
migrations/: DESIGN.md
npm/: package.json
pypi/: .gitignore  README.md  pyproject.toml
pypi/pgspec/: __init__.py  __main__.py
todo/: sqlite-support.md
(+23 files in other folders)
