[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pgdesign"
version = "0.1.2"
description = "PostgreSQL schema compiler with strict enforcement, NF auditing, and declarative migrations"
license = "MIT"
requires-python = ">=3.8"
readme = "README.md"
keywords = ["rlsbl"]

[project.urls]
Homepage = "https://github.com/smm-h/pgdesign"
Repository = "https://github.com/smm-h/pgdesign"

[project.scripts]
pgdesign = "pgdesign:main"
